2004-01-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c (aopPut): fixed bug #1103902

2004-01-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/expf.c: fixed bug #1095792

2005-01-24 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/pic16/libm: added Math library sources

2005-01-24 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.h: added second memory operand to pCodeOpReg
	  to enable upcast to pCodeOpReg2 (there is no type tag to
	  differenciate the two and pic16_popGet2p cast into PCOR2)
	* src/pic16/main.c (_process_pragma): fixed another malloc bug
	  (sizeof(sectNames) changed to sizeof(sectName))
	  Both patches fix segfaults under MinGW.

2005-01-23 Raphael Neider <rneider AT web.de>

	* src/pic16/{device.c,pcode.c}: s/free/Safe_free/g for
	  Safe_[mc]?alloc()'ed variables
	* src/pic16/gen.c (pic16_aopOp,pic16_popGet): added handling
	  of (byte sized) temporaries (assign them to WREG for now)
	* src/pic16/main.c (_process_pragma): fixed nasty malloc bug
	  (used sizeof(set *sectSyms) instead of sizeof(struct sectSym)),
	  this might fix SIGSEGVs on MinGW...
	* src/SDCCopt.c (killDeadCode): restored original behaviour
	  (volatile operands might get thrown away though)

2005-01-23 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c: fixed bug #1106975,
	* src/pic16/gen.c: fixed possible bug #1102572, now during TOS
	pointer update, INTCON is saved, global interrupts are disabled and
	restored after updateing TOS.
	* src/SDCC.y, src/SDCC.lex, src/SDCCsymt.c, src/SDCCsymt.h:
	* added function attribute 'shadowregs' to take advantage of shadow
	registers,
	* added function attribute 'wparam' as an alternative to the wparam
	pragma,
	* support/Utils/SDCCerr.[ch]: added error E_SHADOWREGS_NO_ISR when
	user declares a non-ISR function as 'shadowregs',
	* doc/sdccman.lyx: updated to reflect recent changes of pic16 port

2005-01-22 Vangelis Rokas <vrokas AT otenet.gr>
